# internal/handler/http/user_requests.go
@@ -1,0 +1,6 @@
+package http
+
+type UpdateUserRequest struct {
+    FirstName string `json:"first_name"`
+    LastName  string `json:"last_name"`
+}
